--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "express-promise-router": "^3.0.3",
     "joi": "^13.6.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.8",
     "morgan": "^1.9.0"
   }
