--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.8",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "mysql": "^2.16.0"
   }
 }
