--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.8",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
     "mysql": "^2.16.0",
     "socket.io": "^2.1.1"
